syntax = "proto3";

package oura.decoded;

// Auto-generated from field declarations ONLY (no newMessageInfo)
// Total messages: 114

message ActivityInfoEvent {
  repeated int64 timestamp = 1;
  repeated int32 step_count = 2;
  repeated float met_level1 = 3;
  repeated float met_level2 = 4;
  repeated float met_level3 = 5;
  repeated float met_level4 = 6;
  repeated float met_level5 = 7;
  repeated float met_level6 = 8;
  repeated float met_level7 = 9;
  repeated float met_level8 = 10;
  repeated float met_level9 = 11;
  repeated float met_level10 = 12;
  repeated float met_level11 = 13;
  repeated float met_level12 = 14;
  repeated float met_level13 = 15;
}

message AlertEvent {
  repeated int64 timestamp = 1;
  repeated int32 alert_type = 2;
}

message AmbientEvent {
  repeated int64 timestamp = 1;
  repeated int32 value = 2;
}

message BedtimePeriod {
  repeated int64 timestamp = 1;
  repeated int64 bedtime_start = 2;
  repeated int64 bedtime_end = 3;
  repeated int32 start_timezone_seconds = 4;
  repeated int32 end_timezone_seconds = 5;
}

message BleConnectionIndConnected {
  repeated int64 timestamp = 1;
  repeated int32 peer_addr_type = 2;
  bytes peer_addr = 3;
}

message BleConnectionIndConnectedExtended {
  repeated int64 timestamp = 1;
  repeated int32 peer_addr_type = 2;
  bytes peer_addr = 3;
  repeated int32 connection_handle = 4;
  repeated bool non_bonded_connection_allowed = 5;
}

message BleConnectionIndDisconnected {
  repeated int64 timestamp = 1;
  repeated int32 average_rssi = 2;
  repeated int32 min_rssi = 3;
  repeated int32 max_rssi = 4;
  repeated int32 sample_count = 5;
  repeated int32 seconds_in_foreground_mode = 6;
  repeated int32 seconds_in_background_mode = 7;
}

message BleConnectionIndDisconnectedExtended {
  repeated int64 timestamp = 1;
  repeated int32 average_rssi = 2;
  repeated int32 seconds_in_foreground_mode = 3;
  repeated int32 seconds_in_background_mode = 4;
  repeated int32 disconnect_reason = 5;
  repeated int32 info_bitfield = 6;
  repeated bool info_bitfield_b0event_sync_in_progress = 7;
  repeated bool info_bitfield_b1tx_phy = 8;
  repeated bool info_bitfield_b2rx_phy = 9;
  repeated bool info_bitfield_b3link_encrypted = 10;
  repeated bool info_bitfield_b4ble_mode = 11;
  repeated int32 parameter_update_state = 12;
  repeated int32 time_last_parameter_update = 13;
}

message BleConnectionIndDisconnectedExtended2 {
  repeated int64 timestamp = 1;
  repeated int32 tx_packet_size = 2;
  repeated int32 rx_packet_size = 3;
  repeated int32 tx_byte_count = 4;
  repeated int32 rx_byte_count = 5;
}

message BleConnectionIndDisconnectedExtendedLinkQuality {
  repeated int64 timestamp = 1;
  repeated int32 connection_event_count = 2;
  repeated int32 crc_error = 3;
  repeated int32 retransmissions = 4;
  repeated int32 missed_connection_events = 5;
}

message CvaRawPpgData {
  repeated int32 sample_values = 3;
}

message DebugDataAcmConfigurationChanged {
  repeated int64 timestamp = 1;
  repeated int32 accelerometer_mode = 2;
  repeated int32 accelerometer_odr = 3;
  repeated int32 accelerometer_range = 4;
  repeated int32 gyroscope_odr = 5;
  repeated int32 gyroscope_range = 6;
  repeated int32 accelerator_enabled_event_mask = 7;
  repeated int32 requested_fifo_sample_depth = 8;
}

message DebugDataAfePpgSettings {
  repeated int64 timestamp = 1;
  repeated int32 ppg_parameter_struct_size = 2;
  repeated int32 first_ppg_parameters = 3;
  repeated int32 second_ppg_parameters = 4;
  repeated int32 third_ppg_parameters = 5;
}

message DebugDataAfeStatisticsValues {
  repeated int64 timestamp = 1;
  repeated int32 total_measurement_count = 2;
  repeated int32 led0measurement_count = 3;
  repeated int32 led1measurement_count = 4;
  repeated int32 led2measurement_count = 5;
  repeated int32 led3measurement_count = 6;
  repeated int32 led4measurement_count = 7;
  repeated int32 led5measurement_count = 8;
  repeated int32 led6measurement_count = 9;
  repeated int32 led7measurement_count = 10;
  repeated int32 led8measurement_count = 11;
  repeated int32 led9measurement_count = 12;
  repeated int32 led10measurement_count = 13;
}

message DebugDataBackgroundDFUState {
  repeated int64 timestamp = 1;
  repeated int32 dfu_state = 2;
}

message DebugDataBatteryLevelChanged {
  repeated int64 timestamp = 1;
  repeated int32 battery_level = 2;
  repeated int32 battery_voltage = 3;
  repeated bool in_charger = 4;
  repeated bool charging = 5;
}

message DebugDataBleModeSwitch {
  repeated int64 timestamp = 1;
  repeated int32 ble_mode = 2;
  repeated int32 state = 3;
}

message DebugDataBleModuleError {
  repeated int64 timestamp = 1;
  repeated int32 module_id = 2;
  repeated int32 line_number = 3;
  repeated int32 error_code = 4;
}

message DebugDataBlePairingCompleted {
  repeated int64 timestamp = 1;
  repeated int32 bonding_handle = 2;
  repeated int32 error_code = 3;
  repeated int32 bonded = 4;
}

message DebugDataBleUsageStatistics {
  repeated int64 timestamp = 1;
  repeated int32 ticks_fast_mode = 2;
  repeated int32 ticks_slow_mode = 3;
  repeated int32 ticks_advertising_mode = 4;
}

message DebugDataBondInformationRemoved {
  repeated int64 timestamp = 1;
  repeated int32 connection_handle = 2;
  repeated int32 handle_to_keep = 3;
  repeated int32 handle_to_remove = 4;
  repeated int32 number_of_devices = 5;
  repeated int32 error_code = 6;
}

message DebugDataBootLoaderDebugLog {
  repeated int64 timestamp = 1;
  repeated int32 line_number = 2;
  repeated int32 message_type = 3;
  repeated int32 return_value = 4;
}

message DebugDataBufferWrapped {
  repeated int64 timestamp = 1;
  repeated int32 buffer_id = 2;
  repeated int32 oldest_timestamp = 3;
}

message DebugDataChargerFirmwareAndPSN {
  repeated int64 timestamp = 1;
  repeated int32 charger_fw_major = 2;
  repeated int32 charger_fw_minor = 3;
  repeated int32 charger_fw_patch = 4;
  bytes psn = 5;
}

message DebugDataChargerLinkParams {
  repeated int64 timestamp = 1;
  bytes communication_window = 2;
  bytes charging_window = 3;
}

message DebugDataChargerSelfTestResults {
  repeated int64 timestamp = 1;
  repeated int32 passed_self_test_mask = 2;
  repeated int32 failed_self_test_mask = 3;
  bytes comm_uart_details = 4;
  bytes coil_control_details = 5;
  bytes usb_voltage_details = 6;
  bytes supply_details = 7;
}

message DebugDataChargingEndStatistics {
  repeated int64 timestamp = 1;
  repeated int32 charging_event_durations = 2;
  repeated int32 estimated_time_in_cc_phage_in_seconds = 3;
  repeated int32 battery_capasity_percentage_start = 4;
  repeated int32 battery_capasity_percentage_end = 5;
  repeated int32 battery_voltage_start_in_mv = 6;
  repeated int32 battery_voltage_end_in_mv = 7;
  repeated int32 charging_ended_reason = 8;
}

message DebugDataChargingEndStatisticsContinued {
  repeated int64 timestamp = 1;
  repeated int32 max_battery_voltage = 2;
  repeated int32 temp_before_charging = 3;
  repeated int32 max_temp_during_charging = 4;
  repeated int32 slope_meas_voltage_start = 5;
  repeated int32 slope_meas_voltage_end = 6;
  repeated int32 slope_meas_duration = 7;
}

message DebugDataChargingTime {
  repeated int64 timestamp = 1;
  repeated int32 charging_time_ms = 2;
}

message DebugDataCrashDump {
  repeated int64 timestamp = 1;
  repeated int32 assert_source = 2;
  repeated int32 line_number = 3;
  bytes message = 4;
}

message DebugDataCrashDumpEventQueue {
  repeated int64 timestamp = 1;
  repeated int32 queue_type = 2;
  repeated int32 number_of_free_slots = 3;
  repeated int32 event_id = 4;
  repeated int32 number_of_events = 5;
}

message DebugDataDataReliabilityIndex {
  repeated int64 timestamp = 1;
  repeated int32 ir_first_value = 2;
  repeated int32 ir_second_value = 3;
  repeated int32 red_first_value = 4;
  repeated int32 red_second_value = 5;
  repeated int32 green_first_value = 6;
  repeated int32 green_second_value = 7;
}

message DebugDataEventSyncCacheStatistics {
  repeated int64 timestamp = 1;
  repeated int32 header_read_count_from_cache = 2;
  repeated int32 header_read_count_from_flash = 3;
  repeated int32 event_read_count_from_cache = 4;
  repeated int32 event_read_count_from_flash = 5;
}

message DebugDataEventSyncStatistics {
  repeated int64 timestamp = 1;
  repeated int32 connection_interval = 2;
  repeated int32 synced_bytes_count = 3;
  repeated int32 sync_duration_in_ms = 4;
  repeated int32 mtu = 5;
}

message DebugDataFieldTestInformation1 {
  repeated int64 timestamp = 1;
  repeated int32 number_of_hw_tests = 2;
}

message DebugDataFieldTestInformation2 {
  repeated int64 timestamp = 1;
  repeated int32 test_index = 2;
  repeated int32 hw_test_identifier = 3;
}

message DebugDataFieldTestInformation3 {
  repeated int64 timestamp = 1;
  repeated int32 test_index = 2;
  repeated int32 hw_test_identifier = 3;
  repeated int32 hw_test_result_code = 4;
}

message DebugDataFieldTestInformation4 {
  repeated int64 timestamp = 1;
  repeated int32 number_of_tests_ran = 2;
  repeated int32 last_hw_result_code = 3;
}

message DebugDataFieldTestMcuPinConfigInfo0 {
  repeated int64 timestamp = 1;
  repeated int32 port = 2;
  repeated int32 info_type = 3;
  repeated int32 gpio_output_buffer_drive_mode = 4;
  repeated int32 gpio_input_buffer_voltage_threshold = 5;
  repeated int32 gpio_output_buffer_slewrate_and_drive_strength = 6;
}

message DebugDataFieldTestMcuPinConfigInfo1 {
  repeated int64 timestamp = 1;
  repeated int32 port = 2;
  repeated int32 info_type = 3;
  repeated int32 port_sio_configuration = 4;
  repeated int32 port_interrupt_edge_trigger_and_filter_configuration = 5;
  repeated int32 port_masked_interrupt_status = 6;
}

message DebugDataFingerDetection {
  repeated int64 timestamp = 1;
  repeated int32 average_ir_led2 = 2;
  repeated int32 minimum_ir_led2 = 3;
  repeated int32 maximum_ir_led2 = 4;
  repeated int32 measurement_count = 5;
}

message DebugDataFlashUsageStatistics {
  repeated int64 timestamp = 1;
  repeated int32 ticks_reading_flash = 2;
  repeated int32 ticks_writing_flash = 3;
  repeated int32 ticks_erasing_flash = 4;
}

message DebugDataFuelGaugeLoggingRegisters {
  repeated int64 timestamp = 1;
  repeated int32 cycles_register = 2;
  repeated int32 full_cap_rep_register = 3;
  repeated int32 full_cap_nom_register = 4;
  repeated int32 learncfg_register = 5;
  repeated int32 vf_soc_register = 6;
}

message DebugDataFuelGaugeRegisterDump {
  repeated int64 timestamp = 1;
  repeated int32 dump_type = 2;
  repeated int32 is_valid = 3;
  repeated int32 struct_version = 4;
  repeated int32 reg_rcombo = 5;
  repeated int32 reg_temp_co = 6;
  repeated int32 reg_full_cap_rep = 7;
  repeated int32 reg_cycles = 8;
  repeated int32 reg_full_cap_num = 9;
}

message DebugDataFuelGaugeStatistics {
  repeated int64 timestamp = 1;
  repeated float battery_percentage = 2;
  repeated int32 average_battery_voltage = 3;
  repeated int32 average_current_consumption = 4;
  repeated int32 remaining_capacity = 5;
  repeated int32 coulomb_counter = 6;
}

message DebugDataHardwareTestAdjacentPinAdcCheckData {
  repeated int64 timestamp = 1;
  repeated int32 input_port_number = 2;
  repeated int32 input_pin_number = 3;
  repeated int32 output_port_number = 4;
  repeated int32 output_pin_number = 5;
  repeated int32 test_adc_results_in_mv = 6;
}

message DebugDataHardwareTestBatteryDcirTestData1 {
  repeated int64 timestamp = 1;
  repeated int32 battery_dcir_resistance = 2;
  repeated int32 measured_battery_voltage_mv_v1 = 3;
  repeated int32 measured_battery_voltage_mv_v2 = 4;
  repeated int32 measured_battery_voltage_mv_v3 = 5;
  repeated int32 estimator_l2current_ma = 6;
  repeated int32 vled_voltage_ir_led_mv = 7;
}

message DebugDataHardwareTestBatteryDcirTestData2 {
  repeated int64 timestamp = 1;
  repeated int32 battery_current_while_load_on_ma = 2;
  repeated int32 battery_current_while_load_off_ma = 3;
  repeated int32 gauge_measured_soc_percent_at_start = 4;
  repeated int32 battery_temperature_at_start = 5;
}

message DebugDataHardwareTestExternalClockMeasurementData {
  repeated int64 timestamp = 1;
  repeated int32 external_hf_clock_start_retries = 2;
  repeated bool external_hf_clock_run_failure = 3;
  repeated int32 external_hf_clock_frequency_diff_against_internal_oscillator = 4;
  repeated int32 external_lf_clock_start_retries = 5;
  repeated bool external_lf_clock_run_failure = 6;
  repeated int32 external_hf_clock_frequency_diff_against_external_lf_oscillator = 7;
}

message DebugDataHardwareTestPinAdcCheckData {
  repeated int64 timestamp = 1;
  repeated int32 pin_port_number = 2;
  repeated int32 pin_number = 3;
  repeated int32 adc_check_type = 4;
  repeated int32 first_adc_result_in_mv = 5;
  repeated int32 second_adc_result_in_mv = 6;
  repeated int32 third_adc_result_in_mv = 7;
  repeated int32 fourth_adc_result_in_mv = 8;
}

message DebugDataHardwareTestResultValues {
  repeated int64 timestamp = 1;
  repeated int32 test_id = 2;
  repeated int32 test_duration = 3;
  repeated int32 average_current = 4;
  repeated int32 temperature = 5;
  repeated int32 start_vbat = 6;
  repeated int32 end_vbat = 7;
  repeated int32 minimum_current = 8;
  repeated int32 maximum_current = 9;
}

message DebugDataHardwareTestStartValues {
  repeated int64 timestamp = 1;
  repeated int32 test_id = 2;
  repeated int32 test_duration = 3;
  repeated int32 valid_argument_count = 4;
  repeated int32 argument1 = 5;
  repeated int32 argument2 = 6;
}

message DebugDataHrSettingsData {
  repeated int64 timestamp = 1;
  repeated int32 led_on = 2;
  repeated int32 adc_on = 3;
  repeated int32 period = 4;
  repeated int32 led1power = 5;
  repeated int32 led2power = 6;
  repeated int32 gain_setting = 7;
  repeated int32 gain13setting = 8;
  repeated int32 selected_hr_config = 9;
  repeated int32 amplitude_state = 10;
}

message DebugDataLegacySecurityFailure {
  repeated int64 timestamp = 1;
  repeated int32 failure_type = 2;
  repeated int32 message_id = 3;
  repeated int32 data_part_length = 4;
  repeated int32 value_part_length = 5;
}

message DebugDataOpenAfePpgSettingsData {
  repeated int64 timestamp = 1;
  repeated int32 afe_hwid = 2;
  bytes open_afe_parameters1 = 3;
  bytes open_afe_parameters2 = 4;
}

message DebugDataPeriodInfoStatistics {
  repeated int64 timestamp = 1;
  repeated int32 ticks_measuring_last_period = 2;
  repeated float systime_spent_in_last_state_s = 3;
  repeated int32 pfsm_state = 4;
}

message DebugDataPpgSignalQualityStats {
  repeated int64 timestamp = 1;
  repeated int32 ppg_measurement_slot1 = 2;
  repeated int32 ppg_measurement_slot2 = 3;
  repeated int32 pd_mask1 = 4;
  repeated int32 pd_mask2 = 5;
  repeated int32 led_channel_description1 = 6;
  repeated int32 led_channel_description2 = 7;
  repeated int32 measurement_duration = 8;
  repeated int32 content_mask = 9;
  repeated int32 dc_value = 10;
  repeated int32 ac_scaler = 11;
  repeated int32 ac_amplitude = 12;
  repeated int32 snr_value = 13;
  repeated int32 coupling_index = 14;
  repeated int32 tune_reason = 15;
  repeated int32 ibi_quality_percentage = 16;
}

message DebugDataRawDataDump {
  repeated int64 timestamp = 1;
  repeated int32 event_index = 2;
  repeated int32 raw_data_bytes = 3;
}

message DebugDataRawRingBatteryVoltage {
  repeated int64 timestamp = 1;
  repeated bool continued = 2;
  repeated int32 interval_type = 3;
  repeated int32 first_raw_voltage_mv = 4;
  bytes battery_voltage_deltas_mv = 5;
}

message DebugDataRingHwInformation {
  repeated int64 timestamp = 1;
  repeated int32 hw_version = 2;
  repeated int32 ring_size = 3;
  repeated int32 battery_type = 4;
  repeated int32 acm_type = 5;
  repeated int32 afe_type = 6;
  repeated int32 eflash_type = 7;
}

message DebugDataRingRotationIndexContributor {
  repeated int64 timestamp = 1;
  repeated int32 red_channel_to_pd1dc_level = 2;
  repeated int32 red_channel_to_pd2dc_level = 3;
  repeated int32 ir_channel_to_pd1dc_level = 4;
  repeated int32 ir_channel_to_pd2dc_level = 5;
}

message DebugDataSecurityFailure {
  repeated int64 timestamp = 1;
  repeated int32 failure_type = 2;
  repeated int32 bd_handle = 3;
  repeated int32 auth_failure = 4;
  repeated int32 bonded_security_level = 5;
}

message DebugDataSleepStatistics {
  repeated int64 timestamp = 1;
  repeated int32 ticks_in_deep_sleep = 2;
  repeated int32 ticks_in_sleep = 3;
  repeated int32 ticks_awake = 4;
  repeated int32 pfsm_state = 5;
}

message DebugDataStackUsageStatistics {
  repeated int64 timestamp = 1;
  repeated int32 cm0pstack_max_usage = 2;
  repeated int32 cm4stack_max_usage = 3;
  repeated int32 cm0pstack_size = 4;
  repeated int32 cm4stack_size = 5;
  repeated int32 measurement_duration_s = 6;
}

message DebugEventInd {
  repeated int64 timestamp = 1;
  bytes text = 2;
}

message EhrAcmIntensityEvent {
  repeated int64 timestamp = 1;
  repeated int32 intensity1 = 2;
  repeated int32 intensity2 = 3;
  repeated int32 intensity3 = 4;
  repeated int32 intensity4 = 5;
  repeated int32 intensity5 = 6;
  repeated int32 intensity6 = 7;
  repeated int32 intensity7 = 8;
}

message EhrTraceEvent {
  repeated int64 timestamp = 1;
  repeated int32 message_counter = 2;
  repeated int32 trace_type = 3;
  repeated int32 trace1freq1 = 4;
  repeated int32 trace1freq2 = 5;
  repeated int32 trace110xpov = 6;
  repeated int32 trace2freq1 = 7;
  repeated int32 trace2freq2 = 8;
  repeated int32 trace210xpov = 9;
  repeated int32 trace3freq1 = 10;
  repeated int32 trace3freq2 = 11;
  repeated int32 trace310xpov = 12;
  repeated int32 trace4freq1 = 13;
  repeated int32 trace4freq2 = 14;
  repeated int32 trace410xpov = 15;
}

message Events {
  bytes event = 1;
}

message FeatureSession {
  bytes event = 1;
}

message GreenIbiAndAmpEvent {
  repeated int64 timestamp = 1;
  repeated int32 ibi_ms = 2;
  repeated int32 amp = 3;
}

message GreenIbiQualityEvent {
  repeated int64 timestamp = 1;
  repeated int32 ibi = 2;
  repeated int32 validity = 3;
  repeated int32 quality = 4;
}

message HrvEvent {
  repeated int64 timestamp = 1;
  repeated int32 average_hr5min = 2;
  repeated int32 average_rmssd5min = 3;
}

message IbiAndAmplitudeEvent {
  repeated int64 timestamp = 1;
  repeated int32 ibi = 2;
  repeated int32 amp = 3;
}

message MeasQualityEvent {
  repeated int64 timestamp = 1;
  repeated int32 cqi = 2;
  repeated int32 pqi = 3;
}

message MotionEvent {
  repeated int64 timestamp = 1;
  repeated int32 orientation = 2;
  repeated int32 motion_seconds = 3;
  repeated float average_x = 4;
  repeated float average_y = 5;
  repeated float average_z = 6;
  repeated int32 regularity = 7;
  repeated int32 low_intensity = 8;
  repeated int32 high_intensity = 9;
}

message MotionPeriod {
  repeated int64 timestamp = 1;
  repeated int32 event_type = 2;
  repeated int32 sequence_number = 3;
  repeated int32 motion_state30s = 4;
}

message OldRawPpgData {
  repeated int32 sample_values = 3;
}

message OnDemandMeas {
  repeated int64 timestamp = 1;
  repeated int32 skin_temp_celsius_hundreths = 2;
  repeated int32 registered_motion_periods = 3;
  repeated float average_hr = 4;
  repeated int32 average_hrv = 5;
  repeated float average_breathing_rate_per_minute = 6;
  repeated int32 raw_ppg_sampling_rate = 7;
}

message OnDemandMotion {
  repeated int64 timestamp = 1;
  repeated int32 motion_counts = 2;
}

message OnDemandSession {
  repeated int64 timestamp = 1;
  repeated int32 event_subtype = 2;
  repeated int32 skin_temp_interval_s = 3;
  repeated int32 motion_period_interval_s = 4;
  repeated int32 hr_interval_s = 5;
  repeated int32 hrv_interval_s = 6;
  repeated int32 breathing_rate_interval_s = 7;
  repeated int32 raw_ppg_ppfg_rate_hz = 8;
  repeated int32 max_session_duration_min = 9;
}

message PpgAmplitudeInd {
  repeated int64 timestamp = 1;
  repeated float cv_ppg_amplitude = 2;
}

message RawPpgData {
  bytes measurement = 1;
}

message RawPpgMeasurement {
  repeated int32 sample = 2;
}

message RawPpgSummary {
  repeated int64 timestamp = 1;
  repeated int64 period_start_ms = 2;
  repeated int32 selection_criteria = 3;
  repeated int32 ppg_sample_rate_hz = 4;
  repeated int32 sample_scale_factor = 5;
}

message RealStepsFeatures {
  repeated int64 timestamp = 1;
  bytes first_fft_set = 2;
  bytes second_fft_set = 3;
  bytes third_fft_set = 4;
  repeated int32 sum_accel_mg_std = 5;
  repeated int32 y_accel_std_ratio = 6;
  repeated int32 z_accel_std_ratio = 7;
}

message RepDebugData {
  bytes input_corruption_log = 1;
}

message RingData {
  bytes exception_log = 3000;
}

message RingStartInd {
  repeated int64 timestamp = 1;
  repeated int32 resetreas_bit_map = 2;
  repeated int32 hard_fault_indicator = 3;
  repeated int32 ring_firmware_version_major = 4;
  repeated int32 ring_firmware_version_middle = 5;
  repeated int32 ring_firmware_version_minor = 6;
  repeated int32 ring_bootloader_version_major = 7;
  repeated int32 ring_bootloader_version_middle = 8;
  repeated int32 ring_bootloader_version_minor = 9;
  repeated int32 ring_api_version_major = 10;
  repeated int32 ring_api_version_middle = 11;
  repeated int32 ring_api_version_minor = 12;
  repeated int32 ring_factory_reset_state = 13;
  repeated int32 ring_debug_fw_used = 14;
  repeated int32 ring_type = 15;
}

message ScanEnd {
  repeated int64 timestamp = 1;
  repeated int32 success_code = 2;
  repeated float scan_duration_sec = 3;
  repeated int32 slot = 4;
  repeated int32 slot2 = 5;
  repeated int32 slot3 = 6;
  repeated int32 slot4 = 7;
  repeated int32 channel_id = 8;
  repeated int32 channel_id2 = 9;
  repeated int32 channel_id3 = 10;
  repeated int32 channel_id4 = 11;
  repeated int32 pd_mask = 12;
  repeated int32 pd_mask2 = 13;
  repeated int32 pd_mask3 = 14;
  repeated int32 pd_mask4 = 15;
}

message ScanStart {
  repeated int64 timestamp = 1;
  repeated int32 triggering_feature = 2;
  repeated int32 trigger_reason = 3;
  repeated int32 classification_metric = 4;
  repeated int32 candidate_slot1 = 5;
  repeated int32 candidate_slot2 = 6;
  repeated int32 candidate_slot3 = 7;
  repeated int32 candidate_slot4 = 8;
  repeated int32 candidate_slot5 = 9;
  repeated int32 candidate_slot6 = 10;
}

message SelftestDataEvent {
  repeated int64 timestamp = 1;
  repeated int32 executed_test = 2;
  repeated int32 failed_test = 3;
  repeated int32 result = 4;
  repeated int32 selftest_id = 5;
  repeated int32 detailed_id = 6;
  bytes detailed_data = 7;
}

message SelftestData_AFE {
  repeated int32 led_pd_samples = 2;
  repeated int32 ecg_samples = 3;
  repeated int32 bioz_samples = 4;
}

message SelftestEvent {
  repeated int32 passed_test = 2;
  repeated int32 failed_test = 3;
}

message SleepAcmPeriod {
  repeated int64 timestamp = 1;
  repeated float tmean = 2;
  repeated float max = 3;
  repeated float iqr = 4;
  repeated float mad_tmean = 5;
  repeated float mad_max = 6;
  repeated float mad_iqr = 7;
}

message SleepPeriodInfo {
  repeated int64 timestamp = 1;
  repeated float average_hr = 2;
  repeated float hr_trend = 3;
  repeated float mzci = 4;
  repeated float dzci = 5;
  repeated float breath = 6;
  repeated float breath_v = 7;
  repeated int32 motion_count = 8;
  repeated int32 sleep_state = 9;
  repeated float cv = 10;
}

message SleepPhaseData {
  repeated int64 timestamp = 1;
  repeated int32 start_time = 2;
  repeated int32 sleep_phases = 3;
}

message SleepPhaseDetails {
  repeated int64 timestamp = 1;
  repeated int32 start_time = 2;
  repeated int32 sleep_phases = 3;
}

message SleepSummary1 {
  repeated int64 timestamp = 1;
  repeated int64 bedtime_start = 2;
  repeated int64 bedtime_end = 3;
  repeated int32 start_timezone_seconds = 4;
  repeated int32 end_timezone_seconds = 5;
}

message SleepSummary2 {
  repeated int64 timestamp = 1;
  repeated int32 wake_time30speriods = 2;
  repeated int32 rem_sleep_time30speriods = 3;
  repeated int32 light_sleep_time30speriods = 4;
  repeated int32 deep_sleep_time30speriods = 5;
  repeated int32 time_of_lowest_hr30speriod = 6;
  repeated int32 lowest_hr_during_night = 7;
  repeated int32 sleep_quality_score = 8;
  repeated int32 wake_up_count = 9;
  repeated int32 sleep_onset_latency30speriods = 10;
}

message SleepSummary3 {
  repeated int64 timestamp = 1;
  repeated int32 average_breath_rate = 2;
  repeated int32 std_dev_breath_rate = 3;
  repeated int32 average_heart_rate = 4;
  repeated int32 midpoint_of_sleep = 5;
  repeated int32 highest_temperature = 6;
  repeated int32 restless_period_count = 7;
  repeated int32 got_up_count = 8;
}

message SleepSummary4 {
  repeated int64 timestamp = 1;
  repeated int32 sleep_score_contrib = 2;
  repeated int32 deep_sleep_score_contrib = 3;
  repeated int32 rem_sleep_score_contrib = 4;
  repeated int32 sleep_efficiency_score_contrib = 5;
  repeated int32 sleep_latency_score_contrib = 6;
  repeated int32 sleep_disturbances_score_contrib = 7;
  repeated int32 circadian_alignment_score_contrib = 8;
}

message SleepTempEvent {
  repeated int64 timestamp = 1;
  repeated float temp = 2;
}

message Spo2ComboData {
  bytes event = 1;
}

message Spo2ComboEvent {
  bytes items = 2;
}

message Spo2DcEvent {
  repeated int32 dc = 4;
}

message Spo2Event {
  repeated int64 timestamp = 1;
  repeated int32 beat_offset = 2;
  repeated int32 beat_index = 3;
  repeated int32 spo2value = 4;
  repeated int64 timestamp_fixed = 5;
  repeated bool flush = 6;
}

message Spo2IbiAndAmplitudeEvent {
  repeated int64 timestamp = 1;
  repeated int32 ibi_ms = 2;
  repeated int32 amp = 3;
  repeated int32 beat_index = 4;
  repeated int32 channel_id = 5;
}

message Spo2StableEvent {
  repeated int64 timestamp = 1;
  repeated int32 spo2avg = 2;
  repeated int32 duration_seconds = 3;
}

message StateChangeInd {
  repeated int64 timestamp = 1;
  repeated int32 state = 2;
  bytes text = 3;
}

message TempEvent {
  repeated int64 timestamp = 1;
  repeated float temp1 = 2;
  repeated float temp2 = 3;
  repeated float temp3 = 4;
  repeated float temp4 = 5;
  repeated float temp5 = 6;
  repeated float temp6 = 7;
  repeated float temp7 = 8;
}

message TempPeriod {
  repeated int64 timestamp = 1;
  repeated float temp = 2;
}

message TimeSyncInd {
  repeated int64 timestamp = 1;
  repeated int32 ring_time = 2;
  repeated int32 timezone_seconds = 3;
}

message TimeSyncIndSkipped {
  repeated int64 timestamp = 1;
  repeated int32 ring_time = 2;
  repeated int32 timezone_seconds = 3;
  repeated int32 skip_reason = 4;
}

message WearEvent {
  repeated int64 timestamp = 1;
  repeated int32 state = 2;
  bytes text = 3;
}

